--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://unpkg.com/konva@3.3.3/konva.min.js"></script>
     <style>
       canvas {
         position: absolute;
@@ -10,6 +11,12 @@
         top: 50%;
         margin-left: -300px; /* This is half the width */
         margin-top: -200px; /* This is half the height */
+      }
+        body {
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f0f0f0;
       }
     </style>
     <meta charset="utf-8" />
@@ -23,10 +30,47 @@
   
   </head>
   <body>
+     
    
     <div id="root"></div>
     <canvas id="canvas" width="820px" height="820px"></canvas>
+    <!-- <div id="container"></div>
+    <script>
+      let width = window.innerWidth;
+      let height = window.innerHeight;
 
+      let stage = new Konva.Stage({
+        container: 'container',
+        width: width,
+        height: height
+      });
+
+      let layer = new Konva.Layer();
+      let rectX = stage.width() / 2 - 50;
+      let rectY = stage.height() / 2 - 25;
+
+      let box = new Konva.Rect({
+        x: rectX,
+        y: rectY,
+        width: 100,
+        height: 50,
+        fill: '#00D2FF',
+        stroke: 'black',
+        strokeWidth: 4,
+        draggable: true
+      });
+
+
+      box.on('mouseover', function() {
+        document.body.style.cursor = 'pointer';
+      });
+      box.on('mouseout', function() {
+        document.body.style.cursor = 'default';
+      });
+
+      layer.add(box);
+      stage.add(layer);
+    </script> -->
     
   </body>
 </html>
