--- a/public/index.html
+++ b/public/index.html
@@ -30,47 +30,8 @@
   
   </head>
   <body>
-     
-   
-    <div id="root"></div>
-    <canvas id="canvas" width="820px" height="820px"></canvas>
-    <!-- <div id="container"></div>
-    <script>
-      let width = window.innerWidth;
-      let height = window.innerHeight;
+    <div id='root'>
 
-      let stage = new Konva.Stage({
-        container: 'container',
-        width: width,
-        height: height
-      });
-
-      let layer = new Konva.Layer();
-      let rectX = stage.width() / 2 - 50;
-      let rectY = stage.height() / 2 - 25;
-
-      let box = new Konva.Rect({
-        x: rectX,
-        y: rectY,
-        width: 100,
-        height: 50,
-        fill: '#00D2FF',
-        stroke: 'black',
-        strokeWidth: 4,
-        draggable: true
-      });
-
-
-      box.on('mouseover', function() {
-        document.body.style.cursor = 'pointer';
-      });
-      box.on('mouseout', function() {
-        document.body.style.cursor = 'default';
-      });
-
-      layer.add(box);
-      stage.add(layer);
-    </script> -->
-    
+    </div>
   </body>
 </html>
